Complete Paper 26.2 build 212 baseline